# EMGFlow-Python-Package

./: .coverage  .coveragerc  .gitignore  CITATION.cff  CSV_TO_PHYSIODATA.m  EMGFlow Splash Page.md  EMGT_Example.py  EnvironmentTesting.py  OutlierFinder.py  PeakAffectDS-Analysis.ipynb  PeakAffectDS-Analysis2.ipynb  PeakAffectDS-ToolkitCompare.ipynb  PhysioEpochResults_20230703T150631.xlsx  PhysioEpochResults_20230705T141033.xlsx  PhysioEpochResults_20230705T141236.xlsx  PlotData.py  PlotSubjects.py  README.md  SignalFilterer.py  Spectral Feature Extraction.docx  SpectrumMapper.py  Thesis Paper.docx  Toolkit Comparison.docx  docs-landing-page.html  index.html  nkAnalysisTest.py  overview-landing-page.html  package-lock.json  package-test.py  package.json  pyproject.toml  render-doc.html  requirements.txt  requirements_dev.txt  signal.physioData  signal1.physioData  testfile.py  tox.ini  ~$olkit Comparison.docx
EMGFlow-Package/: .coverage  EMGFlow Package Documentation.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
EMGFlow-Package/src/EMGFlow/: ExtractFeatures.py  FileAccess.py  OutlierFinder.py  PlotSignals.py  PreprocessSignals.py  Presentation_Example.py  SignalFilterer.py  __init__.py  access_files.py  detect_outliers.py  extract_features.py  plot_signals.py  (+1 more)
EMGFlow-Package/tests/: test_ExtractFeatures.py  test_FileAccess.py  test_OutlierFinder.py  test_PlotSignals.py  test_PreprocessSignals.py  test_access_files.py  test_detect_outliers.py  test_extract_features.py  test_plot_signals.py  test_preprocess_signals.py
(+87 files in other folders)
